--- a/invoice/index.html
+++ b/invoice/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Boostrap Labs: Invoice</title>
+    <title>Invoice From Idea Foundry</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,41 +15,117 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="/">Bootstrap Labs</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact-form/index.html">Contact Form</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/address-book/index.html">Address Book</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/invoice/index.html">Invoice</a>
-                    </li>
-                </ul>
+    <div id="hero-invoice" class="container rounded p-2 border-1">
+        <div class="d-flex justify-content-end mt-3 d-print-none">
+            <button type="button" class="btn btn-dark" onclick="window.print();">Print This Page</button>
+        </div>
+        <div class="row align-items-center">
+            <div class="col-sm-7 d-flex justify-content-start">
+                <img src="/img/IdeaFoundryLogo.png" alt="idea foundry logo" title="idea foundry logo" />
+            </div>
+            <div class="co-sm-5 l d-flex justify-content-sm-end just-content-start">
+                <strong>Customer:</strong>&nbsp;4908
             </div>
         </div>
-    </nav>
-    <!-- ======= Hero Section ======= -->
-    <main id="hero-invoice">
-        <div class="container px-4 py-5">
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-                <div class="col">
-                    
+        <hr>
+        <div class="row row-cols-1 row-cols-md-2">
+            <div class="col-sm-6 d-flex justify-content-start">
+                <strong>Date:</strong>&nbsp;5/12/2022
+            </div>
+            <div class="col-sm-6 d-flex justify-content-sm-end justify-content-start">
+                <strong>Invoice No:</strong>&nbsp;19005
+            </div>
+        </div>
+        <hr>
+        <div class="row row-cols-md-2">
+            <div class="col-6 d-flex justify-content-start">
+                <div class="address">
+                    <strong>Invoice To:</strong><br>
+                    <address>
+                        Mark Davis<br>
+                        3333 AL Davis Way <br>
+                        Las Vegas, NV 89118
+                    </address>
+                </div>
+            </div>
+            <div class="col-6 d-flex justify-content-end">
+                <div class="address">
+                    <strong>Pay To:</strong><br>
+                    <address>
+                        Idea Foundry, Inc.<br>
+                        2705 N. Enterprise St<br>
+                        Kenersville, NC 27284
+                    </address>
                 </div>
             </div>
         </div>
-    </main>
+        <div class="row table-responsive">
+            <table class="table table-striped table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Service</th>
+                        <th>Description</th>
+                        <th>Rate</th>
+                        <th>Quantity</th>
+                        <th class="text-end">Amount</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Design</td>
+                        <td>Website Design</td>
+                        <td>$60.00</td>
+                        <td>10</td>
+                        <td class="text-end">$600.00</td>
+                    </tr>
+                    <tr>
+                        <td>Development</td>
+                        <td>Website Development</td>
+                        <td>$150.00</td>
+                        <td>10</td>
+                        <td class="text-end">$1500.00</td>
+                    </tr>
+                    <tr>
+                        <td>Deployment</td>
+                        <td>Deployment & Hosting</td>
+                        <td>$450.00</td>
+                        <td>1</td>
+                        <td class="text-end">$450.00</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="4">
+                            Sub Total:
+                        </td>
+                        <td class="text-end">$2,550.00</td>
+                    </tr>
+                    <tr>
+                        <td colspan="4">
+                            Tax:
+                        </td>
+                        <td class="text-end">$0.00</td>
+                    </tr>
+                    <tr>
+                        <td colspan="4">
+                            Total:
+                        </td>
+                        <td class="text-end">$2,550.00</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+        <footer>
+            <div class="row">
+                <div class="col-12">
+                    <p>
+                        <strong>NOTE:</strong>&nbsp;This is a computer generated receipt and does not require a signature.
+                    </p>
+                </div>
+            </div>
+        </footer>
+    </div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
