added the shopping page challenge

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <a href="/contact-form/index.html" type="button" class="btn btn-outline-warning btn-lg px-4 me-md-2">Contact Form</a>
                         <a href="/address-book/index.html" type="button" class="btn btn-outline-warning btn-lg px-4">Address Book</a>
                         <a href="/invoice/index.html" type="button" class="btn btn-outline-warning btn-lg px-4">Invoice</a>
+                        <a href="/carousel/index.html" type="button" class="btn btn-outline-warning btn-lg px-4">Carousel</a>
                     </div>
                 </div>
             </div>
